[tool.poetry]
name = "maintenance-issue-report"
version = "1.0.0"
description = "A tool for generating PDF issue reports from a GitHub project."
authors = ["Matthew Scheffel <matt@dataheck.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-docx = { git = "https://github.com/michael-koeller/python-docx.git", rev = "a413b724468b9cfc9273349f7a91206200393920", branch = "master" } # custom properties supported
selenium = "^4.3.0"
PyGithub = "^1.55"
python-dotenv = "^0.20.0"
chromedriver-binary = "^113.0.5672.63.0" # match with your installed chrome version; see https://pypi.org/project/chromedriver-binary/#history

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
