[tool.poetry]
name = "maintenance-issue-report"
version = "2.0.0"
description = "A tool for generating PDF issue reports from a GitHub project."
authors = ["Matthew Scheffel <matt@dataheck.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-docx = { git = "https://github.com/isosphere/python-docx.git", rev = "24086982e797c667d64d031753e56f6ad30d765a", branch = "feature/custom_properties" } # custom properties supported
selenium = "^4.3.0"
PyGithub = "^1.59.1"
python-dotenv = "^0.20.0"
gql = {extras = ["requests"], version = "^3.4.1"}
chromedriver-autoinstaller = "^0.6.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
